--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="social">
             <div class="go"><i class="fab fa-google"></i>Google</div>
-            <div class="fb"><i class="fab facebook"></i>Facebook</div>
+            <div class="fb"><i class="fab fa-facebook"></i>Facebook</div>
         </div>
     </form>
 </body>
